# rust-dicebot

./: .gitignore  Cargo.toml
doc/: spec.md
src/: main.rs  roll.rs
