[package]
name = "rust-dicebot"
version = "0.1.0"
authors = ["Takuya Namba <1994athame@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "^0.6"

rand = "^0.8"

serenity = {version = "^0.10", features = ["framework", "standard_framework"]}

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

tokio = {version = "1.6.0", features = ["macros", "rt-multi-thread"]}
